--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @font-face {
     font-family: Playfair Display;
-    src: url(fonts\Playfair_Display\PlayfairDisplay-Regular.ttf);
+    src: url(fonts/Playfair_Display/PlayfairDisplay-Regular.ttf);
 }
-
 
 body {
     margin: 0;
